# PrismLens

./: .coverage  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PIPELINE_STATUS.md  README.md  README_EN.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-core.txt  requirements-lock.txt  requirements.txt  run.py  test_watch.py  verification_report.json
.github/workflows/: ci.yml
benchmark/: runner.py
config/: actions.yaml  entities.yaml  event_aliases.yaml  importance_keywords_free.yaml  phase_transitions.yaml  sources_free.yaml  topics.yaml
docs/: EVENT_SCHEMA_V1.md
memory/: architecture_principle_prompt_product_separation.md  no_ai_traces.md  no_email_during_test.md  phase0_audit_results.md  pre_push_checklist.md  premium_only_focus.md  product_positioning_newsletter.md
prompts/: stage0_extraction.txt  stage0_extraction_en.txt  stage1_event_extraction.txt  stage1_event_extraction_en.txt  stage2_event_clustering.txt  stage2_event_clustering_en.txt  summary_prompt_free.txt  summary_prompt_free_en.txt
prompts/v3/zh/: 00_system.txt  01_editorial.txt  02_schema.txt  03_domain.txt  04_quality.txt  06_style.txt
src/: __init__.py  context_builder.py  event_graph.py  evolution_tracker.py  fetcher.py  generator.py  history_analyzer.py  history_manager.py  mailer.py  main.py  market_data.py  production_metrics.py  prompt_builder.py  prompt_manager.py  quality_checker.py  risk_scorer.py  structured_extractor.py  summarizer.py  summarizer_v3.py  tagged_parser.py  telemetry.py  utils.py
tests/: conftest.py  test_china_data_sources.py  test_china_data_sources_v2.py  test_china_data_sources_v3.py  test_utils.py  test_utils_advanced.py
